--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script defer src="js/funciones.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Alice&family=Arbutus+Slab&family=Calistoga&family=Darumadrop+One&family=Inconsolata:wght@200..900&family=Instrument+Serif:ital@0;1&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Sulphur+Point:wght@300;400;700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- 
