audio añadido y sprite inicial arreglado

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
 </head>
 <body>
+    <audio controls loop>
+        <source src="audio/Perfume - love the world.mp3" type="audio/ogg">
+        <source src="audio/Perfume - love the world.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
     <!-- 
         Encabezado principal de la página con el nombre del juego.
     -->
