flechas y audio arreglado

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
         <!-- Instrucciones del modal con instrucciones -->
         <div class="modalBotones">
-            <p>⭫ <br> feed!</p> <!-- Instrucción para alimentar -->
-            <p>sleep! <br> ⇣</p> <!-- Instrucción para dormir -->
-            <p>⭫ <br> play!</p> <!-- Instrucción para jugar -->
+            <p>↑ <br> feed!</p> <!-- Instrucción para alimentar -->
+            <p>sleep! <br> ↓</p> <!-- Instrucción para dormir -->
+            <p>↑ <br> play!</p> <!-- Instrucción para jugar -->
         </div>
     </div>
     
