--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Beegst friend</title>
+    <link rel="icon" type="image/ico" href="img/icono.ico"/>
     <link rel="stylesheet" href="css/estilo.css">
     <script defer src="js/funciones.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
