--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         Audio de fondo.
     -->
     <audio>
-        <source src="audio/Perfume - love the world.mp3" type="audio/ogg">
-        <source src="audio/Perfume - love the world.mp3" type="audio/mpeg">
+        <source src="audio/love_the_world_by_perfume.mp3" type="audio/ogg">
+        <source src="audio/love_the_world_by_perfume.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
     <!-- 
